// Copyright 2021 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package weetbix.v1;

option go_package = "infra/appengine/weetbix/internal/config;config";

// Config is the service-wide configuration data for Weetbix.
message Config {
  // The endpoint for Monorail APIs.
  string monorail_hostname = 1;

  // The GCS bucket that chunk contents should be archived to.
  string chunk_gcs_bucket = 2;
}
